[tool.poetry]
name = "kubernetes-sdks"
version = "0.1.0"
description = ""
authors = ["David Flanagan <david@rawkode.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
atoma = "^0.0.17"
PyYAML = "^6.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
